fix: prevent mobile zoom in explore mode, show seekbar, fix pause interaction
- Add maximum-scale=1, user-scalable=no to viewport meta
- Add touch-action: none to prevent pinch/double-tap zoom
- Show seekbar on mobile (hide only volume controls)
- Remove pause overlay that was blocking OrbitControls interaction

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="preload" href="%BASE_URL%assets/audio/demo.mp3" as="audio" type="audio/mpeg" crossorigin>
     <link rel="preload" href="%BASE_URL%assets/ZenKakuGothicNew-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="%BASE_URL%assets/ZenKakuGothicNew-Bold.woff2" as="font" type="font/woff2" crossorigin>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="description" content='Web Executable Music Visuals "にび" by monoton' />
     <title>にび – monoton</title>
     <style>
-      html, body { margin: 0; background: #000; width: 100%; height: 100%; overflow: hidden; }
+      html, body { margin: 0; background: #000; width: 100%; height: 100%; overflow: hidden; touch-action: none; }
       #app { width: 100%; height: 100%; }
       @keyframes mv-scan {
         0%   { transform: scaleX(0); transform-origin: left; }
